= Change Log =

* 2.7.0
 * Add ability to check health of redis when url is non-standard redis url
* 2.6.0
 * Add named custom checks
* 2.5.0
 * Added whitelist for IP# (Thanks Fernando Alvarez)
 * reworked whitelist PR
 * Expanded tests for whitelist and basic authentication
 * reworked middleware, simplified error codes, added whitelist and basic authentication into middleware
 * Removed unit tests as they where aonly applicable under rails 2.3 when installed in vendor/plugins
 * #55 by mnoack - correct binstubs arg in test
 * #54 by gkop - Lograge config snippet works with Rails 4.2.7.1, lograge 0.4.1 
 * Used ideas from #52 - use middleware to catch Rails stack exceptions
 * #51 by tokenshift - Fixing NameError on `basic_auth_username`.
 * Changes to address #50 by fillphafftek - allow standard check to be run from middleware if configured to do so, removed requirement for "middleware" to be passed in url for middleware tests
* 2.4.0
 * Added tests for middleware
 * Changed contributed middleware code to conform to existing url scheme
 * Allow both GET and POST calls
 * Prefer config.uri for changing route prefix
* 2.3.0
 * Fix route reload issue
 * Various fixes to get tests working with bundle/jruby and other gem issues
 * Document additional branches
 * Fix route reload issue (auto routing previosuly conflicted with devise)
 * Removed ref to rails 2.3, 3.*

* 2.2.1
  * Adjust private/public cache-control based on max_age set
* 2.2.0
  * Add max_age so we can control the caching of responses, don't run tests if Last-modified still matches
  * Added basic auth - Thanks omadahealth
  * A few macinations due to gem changes and avoidning triggering deprecation notices
  * Add single quote to README to make the configuration file valid - Thanks Ryan Selk <ryanselk@gmail.com>
  * Fixed README formatting
* 2.1.0
  * Updated contributed tests so there is both the forced check and a *-if-present check which tests if the gem's class is loaded