@@ -1,0 +1,26 @@
+# Gemfile for health_test testing
+
+source 'https://rubygems.org'
+
+ruby RUBY_VERSION < '2.2.2' ? '2.2.2' : RUBY_VERSION
+
+gem 'rails', '~> 5.1.0'
+gem 'rake', '>= 0.8.7'
+
+group :development, :test do
+  if defined?(JRUBY_VERSION)
+    gem 'jruby-openssl'
+    gem 'activerecord-jdbcsqlite3-adapter'
+  else
+    gem 'sqlite3', "~> 1.3.7"
+  end
+  gem 'shoulda'
+  
+  # redis based checks
+  gem 'sidekiq', :require => !ENV['SIDEKIQ'].nil?
+  gem 'redis', :require => !ENV['REDIS_URL'].nil?
+  gem 'resque', :require => !ENV['RESQUE'].nil?
+  # s3 check
+  gem 'aws-sdk', :require => !ENV['AWS_ACCESS_KEY_ID'].nil?
+end
+
